<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.RegisterActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

        <TextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="Sign up for free"
            android:textColor="@color/white"
            android:hint=" name"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/name"
            android:id="@+id/nameid"
            android:layout_below="@id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textColor="#BABABA"
            android:textSize="17dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameid"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_rectangle_bg"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:padding="15dp"
            android:hint=" Full Name"
            android:textColor="@color/white"
            android:textColorHint="@color/cardview_dark_background"
            android:textSize="16dp" />

        <TextView
            android:text="@string/phone"
            android:id="@+id/phoneid"
            android:layout_below="@id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:textColor="#BABABA"
            android:textSize="17dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneid"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_rectangle_bg"
            android:drawableLeft="@drawable/ic_baseline_phone_24"
            android:hint=" 0123456789"
            android:inputType="number"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/cardview_dark_background"
            android:textSize="16dp" />

        <TextView
            android:text="@string/email"
            android:id="@+id/emailid"
            android:layout_below="@id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:textColor="#BABABA"
            android:textSize="17dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailid"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_rectangle_bg"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:hint=" example@gmail.com"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/cardview_dark_background"
            android:textSize="16dp" />

        <TextView
            android:text="@string/pwd"
            android:id="@+id/pwdid"
            android:layout_below="@id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:textColor="#BABABA"
            android:textSize="17dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pwdid"
            android:background="@drawable/rounded_rectangle_bg"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:hint=" ********"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/white"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColorHint="@color/cardview_dark_background"
            android:textSize="16dp" />
        <TextView
            android:text="@string/retype"
            android:id="@+id/retype"
            android:layout_below="@id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:textColor="#BABABA"
            android:textSize="17dp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/retypePwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/retype"
            android:background="@drawable/rounded_rectangle_bg"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:hint=" ********"
            android:inputType="textPassword"
            android:padding="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/white"
            android:textColorHint="@color/cardview_dark_background"
            android:textSize="16dp" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/retypePwd"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_rectangle_bg"
            android:backgroundTint="#A9CACF"
            android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
            android:padding="10dp"
            android:text="Sign Up"
            android:textColorHint="@color/white"
            android:textSize="16dp" />

</RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
